--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,51 @@
-@charset "utf-8";
-/* CSS Document */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 
 #container {
@@ -8,19 +54,77 @@
 	max-width:900px;
 	margin:0 auto;
 	
+	
 	}
 
 h1 { 
 	
 	font-family:"Courier New", Courier, monospace;
-	font-size:50px;
+	font-size:60px;
 	background-image: url("monster.jpg");
 }
 
 
-#nav {
-	background-color:2px #999999;
+
+
+nav {
+	border: 1px solid black;
+	width: 200px;
+	bottom-border: none;
+	list-style:none;
+	float:left;
+	
+	
 	}
+	
+nav li{
+	border-bottom:1px solid black;
+}
+
+nav li a{
+	text-decoration:none;
+	background-color:#666666;
+	color:#FFFFFF;
+	font-family: helvetica, sans-serif;
+	font-weight: bold;
+	display:block;
+	padding:10px;
+}
+
+nav a:hover{
+	background-color:#CCCCCC;
+	color: #000000;
+	
+}
+
+nav .active a{
+	background-color: #999999;
+
+}
+
+#content {
+	background-color: #CCCCCC;
+	width:75%;
+	float:left;
+	color:#FFFFFF;
+	
+
+}
+
+
+#footer {
+	clear:both;
+	width:auto;
+	
+
+}
+
+
+
+
+
+
+
 
 	
 	
