--- a/css/css.css
+++ b/css/css.css
@@ -51,7 +51,7 @@ table {
 #container {
 	background: url(trä.jpg);
 	border:2px solid;
-	max-width:900px;
+	max-width:1200px;
 	margin:0 auto;
 	
 	
@@ -103,14 +103,25 @@ nav .active a{
 }
 
 #content {
-	background-color: #CCCCCC;
+	background-color: rgba(204,204,204,0.3);
 	width:75%;
 	float:left;
 	color:#FFFFFF;
 	
+	
+	
+	
 
 }
 
+#content fieldset{
+	border-bottom:2px solid white;
+}
+
+h2{
+	text-align:center;
+	font-size:30px;
+}
 
 #footer {
 	clear:both;
