--- a/css/css.css
+++ b/css/css.css
@@ -269,6 +269,15 @@ a#kontaktactive {
 	display:none;
 		
 }
+
+/* räknare*/
+#rekna {
+	
+}	
+	
+	
+
+}
 @media print {
  
 
@@ -277,6 +286,8 @@ nav {
 
 #container {
 	border:none;}
+
+
 
 
 
